@@ -1,3 +1,7 @@
+2009-11-27 Tom McCauley <thomas.mccauley@cern.ch>
+
+	* ispy_Collisions09_cfg.py: fix file name
+
 2009-11-25  Ianna Osborne  <ianna.osborne@cern.ch>
 
 	* python/iSpy_Producer_cff.py: Full iSpy sequence. Examples
